# coingecko

./: .gitignore  Cargo.toml  README.md  URI.txt  package.json  polywrap.build.yaml  polywrap.deploy.yaml  polywrap.graphql  polywrap.meta.yaml  polywrap.test.yaml  polywrap.yaml  schema.graphql
.github/workflows/: coingecko-cd.yaml  coingecko-ci.yaml
scripts/: generate.py  schema.json  schemas.py
src/: api.rs  lib.rs  utils.rs
src/__tests__/e2e/: integration.spec.ts
src/__tests__/types/: polywrap.app.yaml  schema.graphql
src/routes/: mod.rs  ping.rs
src/routes/simple/: mod.rs  price.rs  supported_vs_currencies.rs  token_price.rs
types/: asset_platform.graphql  coins.graphql  common.graphql  companies.graphql  derivatives.graphql  events.graphql  exchange_rates.graphql  exchanges.graphql  finances.graphql  global.graphql  indexes.graphql  ping.graphql  simple.graphql  trending.graphql
workflows/: client-config.ts  e2e.yaml  output.json  validator.cue  validator.mock.cue
