[package]
name = "json-rpc"
version = "0.1.1"
description = "A Wasm wrapper written in Rust that uses the Polywrap HTTP plugin wrapper to perform JSON RPC queries."
authors = ["Kris Bitney <kris@polywrap.io>"]
repository = "https://github.com/polywrap/demos"
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "~0.11.2" }
polywrap_msgpack_serde = "0.0.2-beta.7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
polywrap = { version = "0.1.9-beta.2" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
